--- a/Laravel+Ubuntu/Vagrantfile
+++ b/Laravel+Ubuntu/Vagrantfile
@@ -3,10 +3,7 @@
 
 # Template environment for all of my vagrant vms. 
 Vagrant.configure("2") do |config|
-  # The most common configuration options are documented and commented below.
-  # For a complete reference, please see the online documentation at
-  # https://docs.vagrantup.com.
-
+  
   # found box on this site: https://app.vagrantup.com/bento/boxes/ubuntu-16.04
   config.vm.box = "bento/ubuntu-16.04"
   config.vm.hostname = "laravel_project"
@@ -32,8 +29,7 @@ Vagrant.configure("2") do |config|
 
   # provision script, install all necessary items here
   config.vm.provision "shell", inline: <<-SHELL
-    apt-get update && sleep 1
-    apt-get upgrade -y
+    apt-get update && sleep 1 && apt-get upgrade -y
     apt-get install -y apache2 php libapache2-mod-php php-mcrypt php-mysql php7.0-zip && sleep 1
     php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
     php -r "if (hash_file('SHA384', 'composer-setup.php') === '544e09ee996cdf60ece3804abc52599c22b1f40f4323403c44d44fdfdd586475ca9813a858088ffbc1f233e9b180f061') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
