--- a/mac_os_dev_machine/Vagrantfile
+++ b/mac_os_dev_machine/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
   config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
 
   # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
+  # using a specific IP.s
   config.vm.network "private_network", ip: "192.168.33.10"
 
   # command below syncs the files to the virtual machine. nice.
