--- a/dev_environment/Vagrantfile
+++ b/dev_environment/Vagrantfile
@@ -67,14 +67,14 @@ Vagrant.configure("2") do |config|
     # provision script, install all necessary items here
     mysqldatabase.vm.provision "shell", inline: <<-SHELL
       apt-get update && sleep 1 && apt-get upgrade -y
-      echo "mysql-server mysql-server/root_password password toor" | sudo debconf-set-selections
-      echo "mysql-server mysql-server/root_password_again password toor" | sudo debconf-set-selections
-      apt-get install -y mysql-server
-      sed -i 's/127\.0\.0\.1/0\.0\.0\.0/g' /etc/mysql/my.cnf
-      mysql -uroot -p -e 'USE mysql; UPDATE `user` SET `Host`="%" WHERE `User`="root" AND `Host`="localhost"; DELETE FROM `user` WHERE `Host` != "%" AND `User`="root"; FLUSH PRIVILEGES;'
-      service mysql restart
-      echo "This machine is now accessible through 192.168.33.11."
-      echo "Your MySQL username is 'root' and password is 'toor'"
+      # echo "mysql-server mysql-server/root_password password toor" | sudo debconf-set-selections
+      # echo "mysql-server mysql-server/root_password_again password toor" | sudo debconf-set-selections
+      # apt-get install -y mysql-server
+      # sed -i 's/127\.0\.0\.1/0\.0\.0\.0/g' /etc/mysql/my.cnf
+      # mysql -uroot -p -e 'USE mysql; UPDATE `user` SET `Host`="%" WHERE `User`="root" AND `Host`="localhost"; DELETE FROM `user` WHERE `Host` != "%" AND `User`="root"; FLUSH PRIVILEGES;'
+      # service mysql restart
+      # echo "This machine is now accessible through 192.168.33.11."
+      # echo "Your MySQL username is 'root' and password is 'toor'"
     SHELL
   end
 
