Changed vagrant file. multiple VMs now for web server, mysql db.

--- a/dev_environment/Vagrantfile
+++ b/dev_environment/Vagrantfile
@@ -6,32 +6,29 @@ Vagrant.configure("2") do |config|
 
 
   ## Provision the web server machine.
-  config.vm.define "webserver" do |webserver|
-    # found box on this site: https://app.vagrantup.com/bento/boxes/ubuntu-18.04
-    webserver.vm.box = "debian/stretch64"
-    webserver.vm.hostname = "apache-server"
+  config.vm.define "apache2" do |apache2|
+    # debian stretchhhh
+    apache2.vm.box = "debian/stretch64"
+    apache2.vm.hostname = "apache-server"
 
     # opens port 80 on the vm, and sets it to 8080 for the host.
-    webserver.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
+    apache2.vm.network "forwarded_port", guest: 80, host: 8888, host_ip: "127.0.0.1"
 
     # Create a private network, which allows host-only access to the machine
     # using a specific IP.
-    webserver.vm.network "private_network", ip: "192.168.33.10"
+    apache2.vm.network "private_network", ip: "192.168.33.10"
 
     # command below syncs the files to the virtual machine. nice.
-    webserver.vm.synced_folder "~/Projects/code", "/app/projects", type: "nfs"
+    apache2.vm.synced_folder "~/Projects/code", "/app/projects", type: "nfs"
 
-    # Provider-specific webserveruration so you can fine-tune various
-    # backing providers for Vagrant. These expose provider-specific options.
-    # Example for VirtualBox:
     #
-    webserver.vm.provider "virtualbox" do |vb|
+    apache2.vm.provider "virtualbox" do |vb|
       # Customize the amount of memory on the VM:
       vb.memory = "1024"
     end
 
     # provision script, install all necessary items here
-    webserver.vm.provision "shell", inline: <<-SHELL
+    apache2.vm.provision "shell", inline: <<-SHELL
       apt-get update && sleep 1 && apt-get upgrade -y
       apt-get install -y apache2 php libapache2-mod-php php-mysql php-zip php-mbstring php-xml && sleep 1
       sudo a2enmod rewrite
@@ -43,30 +40,32 @@ Vagrant.configure("2") do |config|
 
 
   ## Provision the mysql database.
-  config.vm.define "mysqldatabase" do |mysqldatabase|
-    # found box on this site: https://app.vagrantup.com/bento/boxes/ubuntu-18.04
-    mysqldatabase.vm.box = "debian/stretch64"
-    mysqldatabase.vm.hostname = "mysql-db"
+  config.vm.define "mariadb" do |mariadb|
+    # moar debiannnn
+    mariadb.vm.box = "debian/stretch64"
+    mariadb.vm.hostname = "mysql-db"
 
     # opens port 80 on the vm, and sets it to 8080 for the host.
-    mysqldatabase.vm.network "forwarded_port", guest: 3306, host: 3307, host_ip: "127.0.0.1"
+    mariadb.vm.network "forwarded_port", guest: 3306, host: 3307, host_ip: "127.0.0.1"
 
     # Create a private network, which allows host-only access to the machine
     # using a specific IP.
-    mysqldatabase.vm.network "private_network", ip: "192.168.33.11"
+    mariadb.vm.network "private_network", ip: "192.168.33.11"
 
-    # Provider-specific mysqldatabaseuration so you can fine-tune various
-    # backing providers for Vagrant. These expose provider-specific options.
-    # Example for VirtualBox:
     #
-    mysqldatabase.vm.provider "virtualbox" do |vb|
+    mariadb.vm.provider "virtualbox" do |vb|
       # Customize the amount of memory on the VM:
       vb.memory = "1024"
     end
 
     # provision script, install all necessary items here
-    mysqldatabase.vm.provision "shell", inline: <<-SHELL
+    mariadb.vm.provision "shell", inline: <<-SHELL
+      apt-get update
       apt-get update && sleep 1 && apt-get upgrade -y
+
+      apt-get install --assume-yes mysql-server mysql-client
+      sudo mysql -u root -e "CREATE USER 'admin'@'localhost' IDENTIFIED BY '12345';"
+      sudo mysql -u root -e "GRANT ALL PRIVILEGES ON *.* TO 'admin'@'localhost';"
     SHELL
   end
 
